# aws-cost-mutilator

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: python-package.yaml  python-publish.yaml
aws_cost_mutilator/: __init__.py  __main__.py  ec2.py  iam.py  lib.py  s3.py  tests.py
