[tool.poetry]
name = "aws-cost-mutilator"
version = "0.1.0"
description = "A cli to mutilate aws costs, it's what accounting craves."
authors = ["Sky Moore <i@msky.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/skymoore/aws-cost-mutilator"
keywords = ["aws", "cloud"]
classifiers = ["Intended Audience :: Developers", "Natural Language :: English", "Programming Language :: Python :: 3.10",]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.99"
click = "^8.1.7"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
moto = "^4.0.11"
pytest = "^7.2.0"

[[tool.poetry.packages]]
include = "aws_cost_mutilator"

[tool.poetry.scripts]
acm = "aws_cost_mutilator.__main__:cli"
test = "pytest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
